--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
   <div class="control-group">
     <label>Age (熟成年数) <span class="val-disp"><span id="v-age">12</span> Years</span></label>
     <div class="slider-hint"><span>Young (暴れる)</span><span>Aged (統合)</span></div>
-    <input type="range" id="i-age" min="3" max="30" value="12" oninput="syncParam()">
+    <input type="range" id="i-age" min="3" max="60" value="12" oninput="syncParam()">
   </div>
   <div class="control-group">
     <label>ABV (アルコール度数) <span class="val-disp"><span id="v-abv">43</span> %</span></label>
@@ -107,7 +107,7 @@
     <input type="range" id="i-crisp" min="1" max="10" value="5" oninput="syncParam()">
   </div>
   <div class="control-group">
-    <label>Heat (熱量・アタック) <span class="val-disp" id="v-heat">5</span></label>
+    <label>Heat (アルコール感・スパイス) <span class="val-disp" id="v-heat">5</span></label>
     <input type="range" id="i-heat" min="1" max="10" value="5" oninput="syncParam()">
   </div>
   <div class="control-group">
